# uniproton_llm_test_new

./: bin_helper.py  config.xml
bsp/phytium/common/hal/: CMakeLists.txt
bsp/phytium/common/hal/common/: faarch.h  fdebug.h  fkernel.h  fparameters.h  fparameters_comm.h  ftypes.h
bsp/phytium/common/hal/fcan/: fcan.c  fcan.h  fcan_g.c  fcan_hw.h  fcan_intr.c
bsp/phytium/common/hal/fgpio/: fgpio_intr.c
bsp/phytium/common/hal/fi2c/: fi2c.c  fi2c.h  fi2c_hw.c  fi2c_intr.c  fi2c_master.c
bsp/phytium/common/hal/fiopad/: fiopad_hw.c
bsp/phytium/common/hal/fmio/: fmio.c
bsp/phytium/common/hal/fpl011/: fpl011.c  fpl011_intr.c
bsp/phytium/common/hal/fspim/: fspim.c  fspim.h  fspim_hw.c
bsp/phytium/common/hal/ftimer_tacho/: ftimer.c  ftimer_tacho_intr.c
bsp/phytium/common/hal/fxmac/: eth_ieee_reg.h  fxmac.c  fxmac.h  fxmac_bdring.c  fxmac_debug.c  fxmac_g.c  fxmac_hw.h  fxmac_intr.c  fxmac_options.c  fxmac_phy.c  fxmac_phy.h  fxmac_port.c  fxmac_port.h  fxmac_port_nolwip.c  fxmac_port_nolwip.h
bsp/phytium/common/hal/port/: fdrivers_port.c  fdrivers_port.h
bsp/phytium/gsk-e2000q/apps/: CMakeLists.txt  demo.h  demo_fpga_intr.c  demo_localbus.c  main.c
bsp/phytium/gsk-e2000q/apps/ethercat/: hr_delay.h  igh_adapt_interface.c
bsp/rockchip/common/rk3588/hal/: CMakeLists.txt  hal_base.h  hal_cru_rk3588.c  rk3588.h
bsp/rockchip/ok3568-c/apps/: CMakeLists.txt  demo.h  main.c
bsp/rockchip/tl3588-evm/: CMakeLists.txt
bsp/rockchip/tl3588-evm/apps/: CMakeLists.txt  demo.h  demo_pcie.c  main.c
bsp/rockchip/tl3588-evm/apps/ethercat/: hr_delay.c  hr_delay.h  igh_adapt_interface.c
bsp/rockchip/tl3588-evm/config/: cpu_config.h  defconfig  prt_config.c  prt_config.h  prt_config_internal.h  rtconfig.h
bsp/rockchip/tl3588-evm/src/: CMakeLists.txt  hwi_router.c  mmu_table.c  osmain.c  pclk.c  pclk.h  print.c  prt_gic_its.c  prt_gic_its.h  start.S  timer.c
bsp/semdrive/d9340_secure/: CMakeLists.txt  readme.txt
bsp/semdrive/d9340_secure/apps/openamp/: CMakeLists.txt  demo.h  demo_wdg.c  main.c
bsp/semdrive/d9340_secure/component/: UniProton-patch-for-openamp.patch
bsp/semdrive/d9340_secure/config/: prt_config.c  prt_config.h
bsp/semdrive/d9340_secure/src/: CMakeLists.txt  hwi_init.c  print.c  timer.c
bsp/semdrive/d9340_secure/src/d9340_secure/: cpu_config.h  irq_num.h  print.h  r5types.h  reg.h  regs_base.h  rtconfig.h
bsp/semdrive/d9340_secure/src/drivers/: CMakeLists.txt
bsp/semdrive/d9340_secure/src/drivers/include/: sdrv_tmr.h  watchdog.h
bsp/semdrive/d9340_secure/src/drivers/timer/: sdrv_tmr.c  sdrv_tmr.h
bsp/semdrive/d9340_secure/src/drivers/watchdog/: sdrv_watchdog.c  sdrv_watchdog.h  sdrv_watchdog_drv.c  sdrv_watchdog_drv.h  watchdog.c
cmake/tool_chain/: d9340_secure-cortex_r5-config.cmake.in  d9340_secure_cortex_r5.cmake  rk3568_armv8.cmake  rk3568_armv8_config.cmake.in  uniproton_tool_chain.cmake  uniproton_tool_chain_gcc.cmake
components/canopen/: build_canopen.sh  (+2 more)
components/canopen/CANopenNode_port/: .gitignore  CMakeLists.txt  CO_app_target.c  CO_app_target.h  CO_driver_target.c  CO_driver_target.h  DS301_profile.eds  DS301_profile.md  DS301_profile.xpd  OD.c  OD.h
components/lwip/: CMakeLists.txt  build_lwip.sh  lwipopts.h
components/mica/: CMakeLists.txt  mica_init.c  openamp_common.h  resource_table.c  resource_table.h  rpmsg_backend.h  rpmsg_backend_rsc_table.c  rpmsg_service.c  rpmsg_service.h
components/mica/include/: mica_service.h
components/mica/log/: prt_log.c
components/mica/powerdown_protect/: powerdown_prot_service.c
components/mica/proxy/: rpc_internal_model.h  rpc_routines.c  rpc_server_init.c
components/mica/tty/: tty_service_init.c
components/modbus/libmodbus_port/: CMakeLists.txt  modbus_port-rtu.h  modbus_port-tcp.h  modbus_port.c  modbus_port.h
components/rtdriver/: CMakeLists.txt
components/rtdriver/common/include/: rtapi.h  rtdebug.h  rtdef.h  rtservice.h
components/rtdriver/common/src/: device.c  intr.c  memory.c  mutex.c  semaphore.c
components/rtdriver/drivers/can/: can.c
components/rtdriver/drivers/hwtimer/: hwtimer.c
components/rtdriver/drivers/i2c/: i2c_core.c  i2c_dev.c
components/rtdriver/drivers/include/: rtdevice.h
components/rtdriver/drivers/include/drivers/: can.h  hwtimer.h  i2c.h  i2c_dev.h  pin.h  serial_v2.h  spi.h
components/rtdriver/drivers/include/ipc/: completion.h  ringbuffer.h
components/rtdriver/drivers/ipc/: completion.c  ringbuffer.c
components/rtdriver/drivers/misc/: pin.c
components/rtdriver/drivers/serial/: serial_v2.c
components/rtdriver/drivers/spi/: qspi_core.c  spi_core.c  spi_dev.c
components/security/key_verify/: CMakeLists.txt  README  algorithm.c  algorithm.h  boardid.c  boardid.h  build_verify.sh  key_verify.c  key_verify.h
components/security/mbedtls-3.6.2/: CMakeLists.txt  build_mbedtls.sh
components/security/mbedtls-3.6.2/include/mbedtls/: mbedtls_config.h
scripts/: common_test.sh  devcloud_ci.sh  gen-sdk.sh  install_env.sh  requirements-base.txt  set_bootenv.py  twister  upload_binaryarchive.sh
testsuites/: CMakeLists.txt  readme.txt
testsuites/drivers-test/: CMakeLists.txt  runDriversTest.c  runDriversTest.h  testcase.yaml
testsuites/drivers-test/gpio/: gpio_cycle_interrupt.c
testsuites/drivers-test/pcie/: pcie_nvme.h  pcie_nvme_test.c
testsuites/drivers-test/timer/: timer_1h_test.c  timer_diff_test.c  timer_diffperiod_test.c  timer_oneshot_test.c  timer_period_test.c
testsuites/drivers-test/uart/: uart_cfg_test.c  uart_multitask.c  uart_unsupport_mode_test.c
testsuites/kern-test/: CMakeLists.txt  interrupt_test.c  kern_test_public.c  mmu_test.c  priority_test.c  spinlock_test.c  testcase.yaml
testsuites/performance-test/: CMakeLists.txt  performance_public.c  performance_public.h  testcase.yaml
testsuites/performance-test/hrtimer/: nostress_hrtimer_test.c  stress_hrtimer_test.c
testsuites/performance-test/interrupt/: interrupt_gpio.c  stress_interrupt_test.c
testsuites/performance-test/sem_mutex/: release_mutex_time.c
testsuites/performance-test/task-switch-stress/: stress_taskswitch_test.c  task-switch.c
(+951 files in other folders)
