file(GLOB SOURCE_FILES *.c)

if(${CONFIG_OS_OPTION_LOG})
    file(GLOB_RECURSE LOG_SOURCE_FILES "log/*.c")
endif()

if(${CONFIG_OS_OPTION_POWER_DOWN_PROTECT})
    file(GLOB_RECURSE POWERDOWN_SOURCE_FILES "powerdown_protect/*.c")
endif()

file(GLOB_RECURSE PROXY_SOURCE_FILES "proxy/*.c")
file(GLOB_RECURSE TTY_SOURCE_FILES "tty/*.c")

add_library(mica OBJECT ${SOURCE_FILES} ${LOG_SOURCE_FILES} ${POWERDOWN_SOURCE_FILES} ${PROXY_SOURCE_FILES} ${TTY_SOURCE_FILES})
